--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,11 +9,11 @@
 
         <% if (blogs.length > 0) { %>
             <% blogs.forEach(blog => { %>
-
-                <h3 class="title"><%= blog.title %></h3>
-                <p class="snippet"><%= blog.snippet %></p>
-                <br/>
-
+                <a class="single" href="/blogs/<%= blog._id %>">
+                    <h3 class="title"><%= blog.title %></h3>
+                    <p class="snippet"><%= blog.snippet %></p>
+                    <br/>
+                </a>
             <% }) %>
         <% } else { %>
             <p>No blogs exist! Create the first one now clicking <a href="/blogs/create" style="font-weight: bold">here</a></p>        
