date of posting added to blog details view

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -5,6 +5,9 @@
   <%- include("./partials/nav.ejs") %>
 
   <div class="details content">
+    <div>
+      <p class="time">Posted <%= time %></p>
+    </div>
     <h2><%= blog.title %></h2>
     <div class="content">
       <p><%= blog.body %></p>
