--- a/public/styles.css
+++ b/public/styles.css
@@ -60,7 +60,7 @@ h3{
   display: block;
   margin: 40px 0;
   padding-left: 30px;
-  border-left: 6px solid magenta;
+  border-left: 6px solid rgb(204, 118, 204);
 }
 .blogs a:hover h3{
   color: crimson;
@@ -80,6 +80,10 @@ h3{
   cursor: pointer;
   box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
   color: red;
+}
+.time{
+  margin-bottom: 10px;
+  color: rgb(204, 118, 204);
 }
 /* create styles */
 .create-blog form{
