author text box added

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -6,6 +6,8 @@
 
     <div class="create-blog content">
         <form action="/blogs" method="POST">
+          <label for="author">Your name:</label>
+          <input id="author" name="author" required></input>
           <label for="title">Blog title:</label>
           <input type="text" id="title" name="title" required>
           <label for="snippet">Blog snippet:</label>
