--- a/views/details.ejs
+++ b/views/details.ejs
@@ -6,7 +6,7 @@
 
   <div class="details content">
     <div>
-      <p class="time">Posted <%= time %></p>
+      <p class="time">Posted <%= time %> by <%= blog.author%> </p>
     </div>
     <h2><%= blog.title %></h2>
     <div class="content">
