--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,6 +6,8 @@
     <ul>
         <li><a href="/">Blogs</a></li>
         <li><a href="/about">About</a></li>
+        <li><a href="/login">Log In</a></li>
+        <li><a href="/signup">Sign Up</a></li>
         <li><a href="/blogs/create">New Blog</a></li>
     </ul>
 </nav>
