--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,14 @@
-<%- include('partials/header'); -%>
+<%- include('partials/head'); -%>
+<%- include('./partials/nav.ejs')  %>
 
 <form>
     <h2>Sign Up</h2>
+    <label for="firstName">First Name</label>
+    <input type="text" name="firstName">
+    <div class="firstName error"></div>
+    <label for="lastName">Last Name</label>
+    <input type="text" name="lastName">
+    <div class="lastName error"></div>
     <label for="email">Email</label>
     <input type="text" name="email" required>
     <div class="email error"></div>
@@ -13,15 +20,42 @@
 
 <script>
     const form = document.querySelector('form');
+    const emailError = document.querySelector('.email.error');
+    const passwordError = document.querySelector('.password.error');
 
-    form.addEventListener('submit', (e) => {
+    form.addEventListener('submit', async (e) => {
         e.preventDefault();
+
+        //reset errors
+        emailError.textContent = '';
+        passwordError.textContent = '';
 
         //get values
         const email = form.email.value;
         const password = form.password.value;
+        const firstName = form.firstName.value;
+        const lastName = form.lastName.value;
 
-        console.log(email, password);
+        try {
+            const res = await fetch('/signup', {
+                method: 'POST',
+                body: JSON.stringify({ email, password, firstName, lastName}),
+                headers: { 'Content-Type': 'application/json' }
+            });
+            const data = await res.json();
+            console.log(data);
+            if(data.errors) {
+                emailError.textContent = data.errors.email;
+                passwordError.textContent = data.errors.password;
+            }
+            if(data.user) {
+                location.assign('/');
+            }
+        }
+        catch (err) {
+            console.log(err);
+        }
+        
     });
 </script>
 
