--- a/views/create.ejs
+++ b/views/create.ejs
@@ -6,6 +6,7 @@
 
     <div class="create-blog content">
         <form action="/blogs" method="POST">
+          <h2>New Blog</h2>
           <label for="author">Your name:</label>
           <input id="author" name="author" required></input>
           <label for="title">Blog title:</label>
