--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/head'); -%>
-<%- include('./partials/nav.ejs')  %>
+<%- include('./partials/nav.ejs'); -%>
 
 <form>
     <h2>Sign Up</h2>
@@ -22,6 +22,8 @@
     const form = document.querySelector('form');
     const emailError = document.querySelector('.email.error');
     const passwordError = document.querySelector('.password.error');
+    const firstNameError = document.querySelector('.firstName.error');
+    const lastNameError = document.querySelector('.lastName.error');
 
     form.addEventListener('submit', async (e) => {
         e.preventDefault();
@@ -29,27 +31,31 @@
         //reset errors
         emailError.textContent = '';
         passwordError.textContent = '';
+        firstNameError.textContent = '';
+        lastNameError.textContent = '';
 
         //get values
-        const email = form.email.value;
-        const password = form.password.value;
         const firstName = form.firstName.value;
         const lastName = form.lastName.value;
+        const email = form.email.value;
+        const password = form.password.value;
 
         try {
             const res = await fetch('/signup', {
                 method: 'POST',
-                body: JSON.stringify({ email, password, firstName, lastName}),
+                body: JSON.stringify({ firstName, lastName, email, password }),
                 headers: { 'Content-Type': 'application/json' }
             });
             const data = await res.json();
             console.log(data);
             if(data.errors) {
+                firstNameError.textContent = data.errors.firstName;
+                lastNameError.textContent = data.errors.lastName;
                 emailError.textContent = data.errors.email;
                 passwordError.textContent = data.errors.password;
             }
             if(data.user) {
-                location.assign('/');
+                location.assign('/blogs');
             }
         }
         catch (err) {
