--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,11 +5,11 @@
     </div>
     <ul>
         <% if (user) { %>
-            <li>Welcome, <%= user.firstName  %></li>
+            <li><a>Welcome, <%= user.firstName  %></a></li>
             <li><a href="/blogs/create">New Blog</a></li>
             <li><a href="/">Blogs</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="/signup">Sign Up</a></li>
+            <li><a href="/logout">Log Out</a></li>
         <% } else { %>
             <li><a href="/">Blogs</a></li>
             <li><a href="/about">About</a></li>
