--- a/views/details.ejs
+++ b/views/details.ejs
@@ -12,27 +12,29 @@
     <div class="content">
       <p><%= blog.body %></p>
     </div>
-    <% if(user.email === blog.author_email) {  %>
+    <% if(user) { if(user.email === blog.author_email) {  %>
     <a class="delete" data-doc="<%= blog._id %>">
         <img src ="/trash.png" alt="delete icon">
     </a>
-    <% } %>
+    <% } } %>
   </div>
 
   <%- include("./partials/footer.ejs") %>
 
   <script>
-    if(user.email === blog.author_email) {
-      const trashcan = document.querySelector('a.delete');
-      trashcan.addEventListener('click', (e) => {
-        const endpoint = `/blogs/${trashcan.dataset.doc}`;
-        fetch(endpoint, {
-          method: 'DELETE',
-        })
-        .then(response => response.json())
-        .then(data => window.location.href = data.redirect)
-        .catch(err => console.log(err));
-      });
+    if(user){
+      if(user.email === blog.author_email) {
+        const trashcan = document.querySelector('a.delete');
+        trashcan.addEventListener('click', (e) => {
+          const endpoint = `/blogs/${trashcan.dataset.doc}`;
+          fetch(endpoint, {
+            method: 'DELETE',
+          })
+          .then(response => response.json())
+          .then(data => window.location.href = data.redirect)
+          .catch(err => console.log(err));
+        });
+      }
     }
   </script>
 </body>
