Account Management route updated, blog details shows first and last name

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -38,20 +38,20 @@
   <%- include("./partials/footer.ejs") %>
 
   <script>
-    if(user){
-      if(user.email === blog.author_email) {
-        const trashcan = document.querySelector('a.delete');
-        trashcan.addEventListener('click', (e) => {
-          const endpoint = `/blogs/${trashcan.dataset.doc}`;
-          fetch(endpoint, {
-            method: 'DELETE',
-          })
-          .then(response => response.json())
-          .then(data => window.location.href = data.redirect)
-          .catch(err => console.log(err));
-        });
-      }
-    }
-  </script>
+//    if(user){
+//       if(user.email === blog.author_email) {
+//         const trashcan = document.querySelector('a.delete');
+//         trashcan.addEventListener('click', (e) => {
+//           const endpoint = `/blogs/${trashcan.dataset.doc}`;
+//           fetch(endpoint, {
+//             method: 'DELETE',
+//           })
+//           .then(response => response.json())
+//           .then(data => window.location.href = data.redirect)
+//           .catch(err => console.log(err));
+//         });
+//       }
+//     }
+//   </script>
 </body>
 </html>
