--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,7 +9,7 @@
             <li><a href="/blogs/create">New Blog</a></li>
             <li><a href="/">Blogs</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="/account">Acct Management</a></li>
+            <li><a href="/account/<%= user.id %>">Acct Management</a></li>
             <li><a href="/logout">Log Out</a></li>
         <% } else { %>
             <li><a href="/">Blogs</a></li>
