--- a/views/account.ejs
+++ b/views/account.ejs
@@ -12,14 +12,16 @@
         <p>Change Email</p>
         <hr>
         <form class="alter-email-form" action="/account/<%= user._id %>" method="POST">
-          <label for="oldEmail">Old Email</label>
-          <input type="text" id="oldEmail" name="oldEmail" required>
           <label for="newEmail">New Email</label>
           <input type="text" id="newEmail" name="newEmail" required>
+          <div class="newEmail error"></div>
+          <label for="confirmEmail">Confirm Email</label>
+          <input type="text" id="confirmEmail" name="confirmEmail" required>
+          <div class="confirmEmail error"></div>
           <button>Update Email</button>
         </form>
       </div>
-    <div class="alter-password content">
+    <!-- <div class="alter-password content">
       <p>Change Password</p>
       <hr>
       <form class="alter-password-form" action="/account" method="POST">
@@ -31,52 +33,53 @@
         <input type="password" id="confirm-password" name="confirm-password" required>
         <button>Update Password</button>
       </form>
-    </div>
+    </div> -->
 
   </div>
 
   <%- include("./partials/footer.ejs") %>
 
   <script>
-    // const form = document.querySelector('form');
-    // const emailError = document.querySelector('.email.error');
-    // const passwordError = document.querySelector('.password.error');
-    // const firstNameError = document.querySelector('.firstName.error');
-    // const lastNameError = document.querySelector('.lastName.error');
+    const form = document.querySelector('form');
+    const newEmailError = document.querySelector('.newEmail.error');
+    const confirmEmailError = document.querySelector('.confirmEmail.error');
 
     form.addEventListener('submit', async (e) => {
         e.preventDefault();
 
         //reset errors
-        // emailError.textContent = '';
-        // passwordError.textContent = '';
-        // firstNameError.textContent = '';
-        // lastNameError.textContent = '';
+        newEmailError.textContent = '';
+        confirmEmailError.textContent = '';
 
         //get values
-        const oldEmail = form.oldEmail.value;
         const newEmail = form.newEmail.value;
-
-        try {
-            const res = await fetch('/account', {
-                method: 'POST',
-                body: JSON.stringify({ oldEmail, newEmail }),
-                headers: { 'Content-Type': 'application/json' }
-            });
-            const data = await res.json();
-            console.log(data);
-            // if(data.errors) {
-            //     firstNameError.textContent = data.errors.firstName;
-            //     lastNameError.textContent = data.errors.lastName;
-            //     emailError.textContent = data.errors.email;
-            //     passwordError.textContent = data.errors.password;
-            // }
-            if(data.user) {
-                location.assign('/blogs');
-            }
+        const confirmEmail = form.confirmEmail.value;
+        
+        if(newEmail === confirmEmail) {
+          try {
+              const res = await fetch('/account', {
+                  method: 'POST',
+                  body: JSON.stringify({ oldEmail, newEmail }),
+                  headers: { 'Content-Type': 'application/json' }
+              });
+              const data = await res.json();
+              console.log(data);
+              // if(data.errors) {
+              //     firstNameError.textContent = data.errors.firstName;
+              //     lastNameError.textContent = data.errors.lastName;
+              //     emailError.textContent = data.errors.email;
+              //     passwordError.textContent = data.errors.password;
+              // }
+              if(data.user) {
+                  location.assign('/blogs');
+              }
+          }
+          catch (err) {
+              console.log(err);
+          }
         }
-        catch (err) {
-            console.log(err);
+        else {
+          confirmEmailError.textContent = 'Email must Match';
         }
         
     });
