Email update working

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,7 +19,7 @@
 </form>
 
 <script>
-    const form = document.querySelector('form');
+    let form = document.querySelector('form');
     const emailError = document.querySelector('.email.error');
     const passwordError = document.querySelector('.password.error');
     const firstNameError = document.querySelector('.firstName.error');
