--- a/views/account.ejs
+++ b/views/account.ejs
@@ -12,10 +12,11 @@
         <p>Change Email</p>
         <hr>
         <form class="alter-email-form" action="/account/<%= user._id %>" method="POST">
-          <label for="oldEmail">Old Email</label>
-          <input type="text" id="oldEmail" name="oldEmail" required>
           <label for="newEmail">New Email</label>
           <input type="text" id="newEmail" name="newEmail" required>
+          <label for="confirmEmail">Confirm Email</label>
+          <input type="text" id="confirmEmail" name="confirmEmail" required>
+          <div class="newEmail error"></div>
           <button>Update Email</button>
         </form>
       </div>
@@ -39,28 +40,27 @@
 
   <script>
     //THIS IS THE PROBLEM
-    const form2 = document.querySelector('form');
-    // const emailError = document.querySelector('.email.error');
-    // const passwordError = document.querySelector('.password.error');
-    // const firstNameError = document.querySelector('.firstName.error');
-    // const lastNameError = document.querySelector('.lastName.error');
-    form.addEventListener('submit', async (e) => {
+    let accountForm = document.querySelector('form');
+    const emailError = document.querySelector('.newEmail.error');
+
+    accountForm.addEventListener('submit', async (e) => {
         e.preventDefault();
         //reset errors
-        // emailError.textContent = '';
-        // passwordError.textContent = '';
-        // firstNameError.textContent = '';
-        // lastNameError.textContent = '';
+        emailError.textContent = '';
+
+
         //get values
-        const oldEmail = form.oldEmail.value;
-        const newEmail = form.newEmail.value;
+        let newEmail = accountForm.newEmail.value;
+        let confirmEmail = accountForm.confirmEmail.value;
+        
+
         try {
-            const res = await fetch('/account', {
+            let res = await fetch('/account', {
                 method: 'POST',
-                body: JSON.stringify({ oldEmail, newEmail }),
+                body: JSON.stringify({ newEmail }),
                 headers: { 'Content-Type': 'application/json' }
             });
-            const data = await res.json();
+            let data = await res.json();
             console.log(data);
             // if(data.errors) {
             //     firstNameError.textContent = data.errors.firstName;
@@ -68,9 +68,6 @@
             //     emailError.textContent = data.errors.email;
             //     passwordError.textContent = data.errors.password;
             // }
-            if(data.user) {
-                location.assign('/blogs');
-            }
         }
         catch (err) {
             console.log(err);
